--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -4,9 +4,17 @@
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
-    %a.navbar-brand(href="#")
+    %a.navbar-brand(href="#{root_path}")
       = t('app.name')
     .navbar-collapse.collapse.navbar-responsive-collapse
       %ul.nav.navbar-nav
-        %li= link_to t('navbar.sign_in'), new_user_session_path
-        %li= link_to t('navbar.sign_up'), new_user_registration_path
+        - if user_signed_in?
+          %li= link_to current_user.name, posts_path(author_id: current_user.id)
+          %li= link_to t('navbar.new_post'), new_post_path
+          %li
+            = link_to destroy_user_session_path, method: :delete do
+              = t('navbar.sign_out')
+
+        - else
+          %li= link_to t('navbar.sign_in'), new_user_session_path
+          %li= link_to t('navbar.sign_up'), new_user_registration_path
