Setup comments for posts
* Add comment model
* Add/update specs
* Add comments count to post

--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -20,7 +20,7 @@
         %li
           %span
             %i.fa.fa-comment
-            0 #{t('posts.comments')}
+            #{post.comments_count} #{t('posts.comments')}
         %li= '|'
         %li
           %span
